# petro-mcp

./: .gitignore  README.md  glama.json  pyproject.toml  server.json
.github/workflows/: publish.yml  test.yml
docs/: rapidapi-listing.md
examples/: sample_production.csv  sample_well.las  usage_examples.md
src/petro_mcp/: __init__.py  _pro.py  server.py
src/petro_mcp/api/: app.py  rate_limiter.py
src/petro_mcp/prompts/: templates.py
src/petro_mcp/resources/: well_data.py
src/petro_mcp/tools/: advanced_decline.py  calculations.py  compare.py  decline.py  drilling.py  economics.py  las.py  petrophysics.py  probabilistic.py  production.py  production_eng.py  pvt.py  reservoir.py  rta.py  trajectory.py  trends.py  type_curves.py  units.py
src/petro_mcp/utils/: __init__.py
tests/: test_advanced_decline.py  test_api.py  test_calculations.py  test_compare.py  test_decline.py  test_drilling.py  test_economics.py  test_las.py  test_path_validator.py  test_petrophysics.py  test_probabilistic.py  test_production.py  test_production_eng.py  test_prompts.py  test_pvt.py  test_rapidapi.py  test_reservoir.py  test_rta.py  test_server.py  test_trajectory.py  test_trends.py  test_type_curves.py  test_units.py  test_well_data.py
