[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petro-mcp"
version = "0.6.0"
description = "MCP server exposing petroleum engineering data and tools to LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Groundwork Analytics LLC", email = "info@petropt.com" },
]
keywords = [
    "mcp",
    "petroleum-engineering",
    "well-logs",
    "decline-curve",
    "oil-gas",
    "LAS",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "lasio>=0.31",
    "numpy>=1.24",
    "scipy>=1.10",
    "petbox-dca>=2.0.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "petro-taxonomy @ git+https://github.com/petropt/petro-taxonomy.git",
]

[project.optional-dependencies]
trajectory = ["welleng>=0.8"]

[project.urls]
Homepage = "https://petropt.com"
Repository = "https://github.com/petropt/petro-mcp"
Issues = "https://github.com/petropt/petro-mcp/issues"

[project.scripts]
petro-mcp = "petro_mcp.server:main"
petro-api = "petro_mcp.api.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/petro_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
