[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petro-mcp"
version = "1.1.1"
description = "MCP server for petroleum engineering calculations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Groundwork Analytics LLC", email = "info@petropt.com" },
]
keywords = [
    "mcp",
    "petroleum-engineering",
    "well-logs",
    "decline-curve",
    "LAS",
    "model-context-protocol",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "mcp>=1.0.0",
    "lasio>=0.31",
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://petropt.com"

[project.scripts]
petro-mcp = "petro_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/petro_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src/petro_mcp",
    "/tests",
    "/examples/sample_well.las",
    "/examples/sample_production.csv",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    ".claude",
    "research",
    "strategy",
    "CROSS_REPO_TASKS*",
    ".github",
    "glama.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
